--- a/info.yaml
+++ b/info.yaml
@@ -1,10 +1,10 @@
 # Tiny Tapeout project information (Wokwi project)
 project:
-  wokwi_id:     0       # Set this to the ID of your Wokwi project (the number from the project's URL)
-  title:        ""      # Project title
+  wokwi_id:     442983748797580289       # Set this to the ID of your Wokwi project (the number from the project's URL)
+  title:        "Simple Logic-Gate Controlled LEDs"      # Project title
   author:       "Valentin Spindler"      # Your name
   discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
+  description:  "LED - Lighting, Switch controlled"      # One line description of what your project does
   language:     "Wokwi" # other examples include SystemVerilog, Amaranth, VHDL, etc
   clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
 
