--- a/info.yaml
+++ b/info.yaml
@@ -20,19 +20,19 @@ pinout:
   ui[1]: ""
   ui[2]: ""
   ui[3]: ""
-  ui[4]: ""
-  ui[5]: ""
-  ui[6]: ""
-  ui[7]: ""
+  ui[4]: "IN4"
+  ui[5]: "IN5"
+  ui[6]: "IN6"
+  ui[7]: "IN7"
 
   # Outputs
-  uo[0]: ""
+  uo[0]: "OUT0"
   uo[1]: ""
   uo[2]: ""
-  uo[3]: ""
+  uo[3]: "OUT3"
   uo[4]: ""
   uo[5]: ""
-  uo[6]: ""
+  uo[6]: "OUT6"
   uo[7]: ""
 
   # Bidirectional pins
